--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -114,7 +114,7 @@
 }
 .movie{
     flex: 0 0 auto;
-    width: 24%;
+    width: 22%;
     height: 200px;
     text-align: center;
     margin-right: 10px;
@@ -131,4 +131,119 @@
     text-transform: capitalize;
     height: 20px;
     overflow: hidden;
+}
+.movie-title{
+    color: white;
+    font-weight: 500;
+}
+
+
+.nxt-btn:hover,
+.pre-btn:hover{
+    opacity: 1;
+}
+
+.carousel{
+    width: 100% !important;
+    height: 40rem !important;
+    background: linear-gradient(to right, rgb(0, 0, 0), rgb(0, 0, 0));
+}
+
+.carousel-item{
+    height: 40rem !important;
+    background: rgb(24, 24, 24);
+    background: linear-gradient(90deg, rgba(24, 24, 24, 1), rgba(24, 24, 24, 0) 100%);
+}
+
+.movie-info{
+    width: 100%;
+    height: 45rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.movie-detail{
+    width: 50%;
+    height: 100%;
+    background: rgb(24, 24, 24);
+    background: linear-gradient(90deg, rgba(24, 24, 24, 1), rgba(24, 24, 24, 0) 100%);
+    padding: 5vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    color: #fff;
+}
+
+.movie-name{
+    font-size: 30px;
+    font-weight: 500;
+    text-align: left;
+}
+
+.genres{
+    opacity: 0.6;
+    margin: 30px 0;
+    text-align: left;
+}
+
+.des{
+    width: 70%;
+    line-height: 20px;
+    margin-bottom: 30px;
+    text-align: left;
+}
+
+.starring span{
+    opacity: 0.6;
+}
+
+.trailer-container{
+    color: #fff;
+    padding: 5vw 2vw 0;
+    align-items: flex-start;
+}
+.recommendations{
+    color: white;
+    padding: 5vw 2vw 0;
+}
+.heading{
+    color: white;
+    text-align: left;
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+.recommendations-container{
+    width: 100%;
+    display: flex;
+    height: 100%;
+    flex-wrap: wrap;
+}
+.movie-rec{
+    flex: 0 0 auto;
+    width: 21rem;
+    height: 15rem;
+    text-align: center;
+    margin: 5px;
+    cursor: pointer;
+    position: relative;
+}
+.movie-t{
+    position: absolute;
+    bottom: 5px;
+    width: 100%;
+    height: 30px;
+    line-height: 30px;
+    background: rgba(0, 0, 0, 0.5);
+    text-align: center;
+    opacity: 0;
+}
+.movie-rec:hover p{
+    opacity: 1;
+}
+.img-rec{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
 }
