--- a/src/index.css
+++ b/src/index.css
@@ -12,35 +12,160 @@ code {
     monospace;
 }
 
-
-@media only screen and (min-width:768px){
+@media screen and (min-width: 1200px) {
   body{
-    font-size: 16px;
+    font-size: 16px !important;
+  }
+  .nav-img{
+    width: 20rem;
+  }
+  .carousel-picture{
+    height: 32rem !important;
+  }
+}
+ 
+@media screen and (min-device-width: 992px)
+and (max-device-width: 1199px) {
+  body{
+    font-size: 14px !important;
+  }
+  .nav-img{
+    width: 20rem;
+  }
+  .carousel-picture{
+    height: 26rem !important;
+  }
+  .movie-info, .movie-detail{
+    height: 30rem !important;
+  }
+  .movie-detail{
+    width: 50% !important;
   }
 }
 
-
-@media only screen and (min-width:480px) and (max-width:768px){
+@media screen and (min-device-width: 768px)
+and (max-device-width: 991px) {
   body{
-    font-size: 15px;
+    font-size: 14px !important;
+  }
+  .nav-img{
+    width: 18rem;
+  }
+  .carousel-picture{
+    height: 24rem !important;
+    width: 80% !important;
+  }
+  .carousel-control-next, 
+  .carousel-control-prev{
+    width: 25% !important;
+  }
+  .carousel::before,
+  .carousel::after {
+    width: 10% !important;
+  }
+  .movie{
+    height: 12rem !important;
+  }
+  .movie-info, .movie-detail{
+    height: 25rem !important;
+  }
+  .movie-detail{
+    width: 80% !important;
+    background: linear-gradient(90deg, rgb(0, 0, 0) 30%, rgba(0, 0, 0, 0) 100%) !important;
+  }
+  .movie-info img{
+    width: 75% !important;
+    margin-left: 25% !important;
+  }
+  .streaming{
+    height: 32rem !important;
+  }
+  .yt-clips{
+    width: 18rem !important;
+    height: 12rem !important;
   }
 }
-
-
-@media only screen and (max-width:479px){
+@media screen and (min-device-width: 576px)
+and (max-device-width: 767px) {
   body{
-    font-size: 14px;
+    font-size: 14px !important;
+  }
+  .nav-img{
+    width: 18rem;
+  }
+  .carousel-picture{
+    height: 19rem !important;
+    width: 90% !important;
+  }
+  .carousel-control-next, 
+  .carousel-control-prev{
+    width: 15% !important;
+  }
+  .carousel::before,
+  .carousel::after {
+    width: 5% !important;
+  }
+  .movie{
+    height: 10rem !important;
+  }
+  .movie-info, .movie-detail{
+    height: 25rem !important;
+  }
+  .movie-detail{
+    width: 100% !important;
+    background: linear-gradient(90deg, rgb(0, 0, 0) 15%, rgba(0, 0, 0, 0) 80%) !important;
+  }
+  .movie-info img{
+    width: 80% !important;
+    margin-left: 20% !important;
+  }
+  .streaming{
+    height: 25rem !important;
+  }
+  .yt-clips{
+    width: 15rem !important;
+    height: 10rem !important;
   }
 }
-
-/* html, body, div{
-  margin: 0 !important;
-  padding: 0 !important;
-  width: 100%;
+@media screen and (max-device-width: 575px) {
+  body{
+    font-size: 8px !important;
+  }
+  .nav-img{
+    width: 14rem;
+  }
+  .carousel-picture{
+    height: 14rem !important;
+    width: 100% !important;
+  }
+  .carousel-control-next, 
+  .carousel-control-prev{
+    width: 10% !important;
+  }
+  .carousel::before,
+  .carousel::after {
+    width: 0% !important;
+  }
+  .movie{
+    height: 8rem !important;
+  }
+  .movie-info, .movie-detail{
+    height: 15rem !important;
+  }
+  .movie-detail{
+    width: 100% !important;
+    background: linear-gradient(90deg, rgb(0, 0, 0) 15%, rgba(0, 0, 0, 0) 80%) !important;
+  }
+  .movie-info img{
+    width: 100% !important;
+    margin-left: 0% !important;
+  }
+  .streaming{
+    height: 15rem !important;
+  }
+  .yt-clips{
+    width: 12rem !important;
+    height: 8rem !important;
+  }
 }
-.container{
-  width: 100%;
-  height: 100%;
-  margin: 0 !important;
-  padding: 0 !important;
-} */
+ 
