--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -6,149 +6,51 @@
 /* carousel */
 .carousel-control-next{
     margin-right: 0 !important;
-    width: 300px !important;
-  }
-  .carousel-control-next-icon{
+    width: 32%;
+}
+.carousel-control-next-icon{
     width: 80px !important;
-  }
-  .carousel-control-prev{
+}
+.carousel-control-prev{
     margin-left: 0 !important;
-    width: 300px !important;
-  }
-  .carousel-control-prev-icon{
+    width: 32%;
+}
+.carousel-control-prev-icon{
     width: 80px !important;
-  }
+}
 
-  .carousel {
+.carousel {
     position: relative !important;
 }
   
-  .carousel::before,
-  .carousel::after {
+.carousel::before,
+.carousel::after {
     content: "" !important;
     position: absolute !important;
     top: 0 !important;
     bottom: 0 !important;
-    width: 10% !important;
+    width: 15%;
     z-index: 1 !important;
-  }
+}
   
-  .carousel::before {
+.carousel::before {
     left: 0 !important;
     background: linear-gradient(to right, rgb(0, 0, 0,0.5) , rgba(0,0,0,0.5) 100%) !important;
-  }
+}
   
-  .carousel::after {
+.carousel::after {
     right: 0 !important;
     background: linear-gradient(to left, rgba(0,0,0,0.5), rgba(0,0,0,0.5) 100%) !important; 
-  }
- 
-
+}
 .carousel-picture{
-    height: 32rem !important;
-    width: 80% !important;
+    width: 70%;
     margin-left: auto;
     margin-right: auto;
 }
 
+/* cards */
 
 
-.title{
-    font-size: 50px;
-    color: white;
-    font-weight: 800;
-    text-align: left;
-}
-.slogan{
-    font-size: 20px;
-    color: white;
-    font-weight: 500;
-    text-align: left;
-}
-
-/* .moviecard{
-    width: 24%;
-    height: 400px;
-}
-.row-card{  
-    border-radius: 5px;
-    width: 24%;
-    padding: 0;
-    height: 200px;
-    transition-duration: 0.4s;
-    transition-delay: 0.3s;
-    background-size:cover ;
-    background-position: center;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-
-
-
-
-
-.card-container::-webkit-scrollbar {
-    display: none;
-}
-.wrap{
-    width: 100%;
-    height: 200px;
-    margin: 0;  
-}
-
-
-.card-content{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-    font-size: 12px;   
-}
-.row-card:hover .card-gradient{   
-  display: block;
-  visibility: visible;
-  opacity: 1;
-      
-}
-.row-card:hover{
-    transform: scale(1.15);
-}
- */
- .movie-list{
-    width: 100%;
-    height: 250px;
-    position: relative;
-    border: #105FD3;
-    color: aliceblue;
-}
-
-
-.card-container{
-    display: flex;
-    height: 200px;
-    width: 100%;
-    overflow: scroll;
-    align-items: center;   
-    border-radius: 10px;
-    border: white; 
-    scroll-behavior: smooth;
-}
-
-.left-btn{
-    position: absolute;
-    z-index: 3;
-}
-.right-btn{
-    position: absolute;
-    right: 0;
-    z-index: 2;
-}
-.right-btn:hover{
-    transform: scale(1.3);
-}
-.left-btn:hover{
-    transform: scale(1.3);
-}
 .movie-container{
     width: 100%;
     display: flex;
@@ -157,53 +59,81 @@
     overflow-y: hidden;
     scroll-behavior: smooth;
 }
+
 .movie{
-    flex: 0 0 auto;
+    flex: none;
     height : 15rem;
     /* text-align: center; */
     cursor: pointer;
     position: relative;
 }
 
-/* .movie:hover ~ .movie {
-    z-index: 1;
-    transform: translateX(25%);
- } */
 .movie img{
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
+.movie img:hover ~ .movie p{
+    display: block;
+    visibility: visible;
+    opacity: 1;
+    z-index: 1;
+} 
+
 .movie p{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(0, 0, 0, 0.5);
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+    display: none;
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.3s ease-in-out;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+
+
+
+/* .movie p{
     text-transform: capitalize;
     height: 20px;
     overflow: hidden;
-}
-.movie-title{
-    color: white;
-    font-weight: 500;
-}
+} */
 
 
-.nxt-btn:hover,
-.pre-btn:hover{
-    opacity: 1;
-}
 
+/* moviedeatail */
 
 .movie-info{
     width: 100%;
-    height: 45rem;
-    background-size: cover;
-    background-repeat: no-repeat;
+    height: 40rem;
+}
+
+.movie-info img{
+    display: flex;
+    justify-content: end;
+    align-items: end;
+    margin-left: 30%;
+    width: 70%;
+    height: 100%;
+    object-fit: fill;
 }
 
 .movie-detail{
+    position: absolute;
     width: 50%;
-    height: 100%;
-    background: rgb(24, 24, 24);
-    background: linear-gradient(90deg, rgba(24, 24, 24, 1), rgba(24, 24, 24, 0) 100%);
+    height: 40rem;
+    object-fit: fill;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(90deg, rgb(0, 0, 4) 60%, rgba(0, 0, 0, 0) 100%);
     padding: 5vw;
     display: flex;
     flex-direction: column;
@@ -211,75 +141,32 @@
     color: #fff;
 }
 
-.movie-name{
-    font-size: 30px;
-    font-weight: 500;
-    text-align: left;
-}
-
-.genres{
-    opacity: 0.6;
-    margin: 30px 0;
-    text-align: left;
-}
-
-.des{
-    width: 70%;
-    line-height: 20px;
-    margin-bottom: 30px;
-    text-align: left;
-}
-
-.starring span{
-    opacity: 0.6;
-}
-
-
-.recommendations{
-    color: white;
-    padding: 5vw 2vw 0;
-}
-.recommendations-container{
-    width: 100%;
-    display: flex;
-    height: 100%;
-    flex-wrap: wrap;
-}
-.movie-rec{
-    flex: 0 0 auto;
-    width: 21rem;
-    height: 15rem;
-    text-align: center;
-    margin: 5px;
-    cursor: pointer;
-    position: relative;
-}
-.movie-t{
-    position: absolute;
-    bottom: 5px;
-    width: 100%;
-    height: 30px;
-    line-height: 30px;
-    background: rgba(0, 0, 0, 0.5);
-    text-align: center;
-    opacity: 0;
-}
-.movie-rec:hover p{
-    opacity: 1;
-}
-.img-rec{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 10px;
-}
+/* recommendation */
 
 .search{
-   width: 15rem;
-   height: 350px;
-}
-.search img{
-    height: 100%;
+    width: 15rem;
+    height: 350px;
+ }
+ .search img{
+     height: 100%;
+     width: 100%;
+     object-fit: cover;
+ }
+
+ /* navbar */
+ .form-control:focus {
+    border-color: #000000;
+    box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.25);
+} 
+
+/* streaming */
+.streaming{
     width: 100%;
-    object-fit: cover;
+    height: 42rem;
+}
+
+/* trailers */
+.yt-clips{
+    width: 25rem;
+    height: 15rem;
 }
