--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,10 @@ and (max-device-width: 991px) {
     width: 18rem !important;
     height: 12rem !important;
   }
+  .search{
+    width: 12rem !important;
+    height: 20rem !important;
+  }
 }
 @media screen and (min-device-width: 576px)
 and (max-device-width: 767px) {
@@ -126,6 +130,10 @@ and (max-device-width: 767px) {
     width: 15rem !important;
     height: 10rem !important;
   }
+  .search{
+    width: 12rem !important;
+    height: 18rem !important;
+  }
 }
 @media screen and (max-device-width: 575px) {
   body{
@@ -166,6 +174,10 @@ and (max-device-width: 767px) {
   .yt-clips{
     width: 12rem !important;
     height: 8rem !important;
+  }
+  .search{
+    width: 7rem !important;
+    height: 12rem !important;
   }
 }
  
